// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a component 1`] = `
<p
  className="sc-bdVaJa hQcjfZ"
  color="#0082c8"
  transform="normal"
>
  default
</p>
`;

exports[`should render a component with a color 1`] = `
<p
  className="sc-bdVaJa vyQnj"
  color="black"
  transform="normal"
>
  default
</p>
`;

exports[`should render a component with a prop 1`] = `
<p
  className="sc-bdVaJa evIKLC"
  color="#0082c8"
  transform="normal"
>
  default
</p>
`;
